- Implemented pwa App on the prod version - Implemented saving a simple form to the Dexie data base

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="p-3">
 
+  <p>if some code changed you will see here the message</p>
+  <h3 *ngIf="codeUpdated">sourcecode is updated. Please reload</h3>
+
   <app-navigation></app-navigation>
 
   <router-outlet></router-outlet>
