--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,48 +1,71 @@
-<div class="border border-dark rounded p-1">
-  <p>form works!</p>
+<div class="border border-dark rounded p-2">
+  <h1>form </h1>
 
 
   <form #myForm="ngForm" (ngSubmit)="onSubmit(myForm)">
     <div class="form-group">
-      <label>Имя</label>
-      <input class="form-control" name="name" [(ngModel)]="user.name" #name="ngModel" required />
+      <label>name</label>
+      <input class="form-control" name="name" [(ngModel)]="user.name" #name="ngModel" required/>
       <div [hidden]="name.valid || name.untouched" class="alert alert-danger">
         Не указано имя
       </div>
     </div>
 
-
     <div class="form-group">
       <label>Email</label>
       <input class="form-control" type="email" name="email" [(ngModel)]="user.email" #email="ngModel"
-             required email />
+             required email/>
       <div [hidden]="email.valid || email.untouched" class="alert alert-danger">
         invalid email
       </div>
     </div>
 
-
     <div>
-      <select name="manufacture" [(ngModel)]="user.manufacture" required>
-        <option value=""  selected>Choose</option>
-        <option *ngFor="let manufacture of manufacturers" [value]="manufacture">
-          {{ manufacture }}
-      </select>
+      <label>Manufacture</label>
+      <div>
+        <select name="manufacture" [(ngModel)]="user.manufacture" required>
+          <option value="" selected>Choose</option>
+          <option *ngFor="let manufacture of manufacturers" [value]="manufacture">
+            {{ manufacture }}
+        </select>
+      </div>
     </div>
 
-<!--    <div>-->
-<!--      <button-->
-<!--        class="btn btn-primary"-->
-<!--        [disabled]="!myForm.valid"-->
-<!--        (click)="submit(myForm)"-->
-<!--      >submit</button>-->
-<!--    </div>-->
+    <!--    <div>-->
+    <!--      <button-->
+    <!--        class="btn btn-primary"-->
+    <!--        [disabled]="!myForm.valid"-->
+    <!--        (click)="submit(myForm)"-->
+    <!--      >submit</button>-->
+    <!--    </div>-->
 
-    <input type="submit" value="submit" class="btn btn-default" [disabled]="myForm.invalid">
+    <input type="submit" value="submit" class="btn btn-success mt-1" [disabled]="myForm.invalid">
+
+    <div class="border border-dark rounded p-2 mt-2">
+      <h4>dexie db data</h4>
+
+      <table class="table table-bordered border-dark">
+        <tr>
+          <th>name</th>
+          <th>email</th>
+          <th>manufacture</th>
+        </tr>
+
+        <tr *ngFor="let report of reportList">
+          <td>{{report.name}}</td>
+          <td>{{report.email}}</td>
+          <td>{{report.manufacture}}</td>
+        </tr>
+      </table>
+
+      <button
+        class="btn btn-primary"
+        (click)="clearData()"> Clear data
+      </button>
+
+    </div>
 
   </form>
-
-
 
 </div>
 
